# AI-Linux-Windows

./: .gitignore  ERforce.sh  Grsim.sh  README.md  a.out  autosavelog.sh  code.sh  startall.sh  startgrsim.sh  startrefree.sh  startwithrefree.sh
omid/: CMakeLists.txt  auto.sh
omid/ai/: FieldGeometry.h  GameState.h  GetSystemData.h  HandleMainThreadFunctions.cpp  HighLevel.cpp  HighLevel.h  MotionControl.cpp  MotionControl.h  RRT.cpp  RRT.h  Referee.cpp  Referee.h  Socket_udp.cpp  Socket_udp.h  Strategy.cpp  Strategy.h  Switches.h  Vision.cpp  Vision.h  VisionBall.cpp  VisionComminucation.cpp  VisionRobot.cpp  estimation.cpp  estimation.h  filter.cpp  filter.h  geometry.cpp  geometry.h  main.cpp  matrix.h  nrf.cpp  nrf.h  timer.cpp  timer.h  world.cpp  world.h
omid/ai/GL/: glut.h  glxew.h
omid/ai/Protobuf/: auto.sh  game_event.pb.cc  messages_robocup_ssl_geometry.pb.cc  rcon.pb.h  referee.pb.cc  referee.pb.h  savestate.pb.cc  savestate.pb.h
omid/ai/Protobuf/ER-force/: messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_detection_tracked.pb.h  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_geometry_legacy.pb.cc  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  messages_robocup_ssl_wrapper_legacy.pb.h  messages_robocup_ssl_wrapper_tracked.pb.cc  messages_robocup_ssl_wrapper_tracked.pb.h  ssl_simulation_config.pb.cc  ssl_simulation_config.pb.h  ssl_simulation_config.proto  ssl_simulation_control.pb.cc  ssl_simulation_control.pb.h  ssl_simulation_control.proto  ssl_simulation_error.pb.cc  ssl_simulation_error.pb.h  ssl_simulation_robot_control.pb.cc  ssl_simulation_robot_control.pb.h  ssl_simulation_robot_feedback.pb.cc  ssl_simulation_robot_feedback.pb.h  vision_detection.pb.h
omid/ai/Protobuf/ER-force/vision2/: messages_robocup_ssl_detection.pb.cc  messages_robocup_ssl_detection.pb.h  messages_robocup_ssl_detection_tracked.pb.cc  messages_robocup_ssl_detection_tracked.pb.h  messages_robocup_ssl_geometry.pb.cc  messages_robocup_ssl_geometry.pb.h  messages_robocup_ssl_geometry_legacy.pb.cc  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_refbox_log.pb.cc  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.cc  messages_robocup_ssl_wrapper.pb.h  messages_robocup_ssl_wrapper_legacy.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.h  messages_robocup_ssl_wrapper_tracked.pb.cc  messages_robocup_ssl_wrapper_tracked.pb.h  vision_detection.pb.cc  vision_detection.pb.h
omid/ai/Protobuf/Grsim/: grSim_Commands.pb.cc  grSim_Commands.pb.h  grSim_Packet.pb.cc  grSim_Packet.pb.h  grSim_Replacement.pb.cc  grSim_Replacement.pb.h
omid/ai/Protobuf/Refree/: game_event.pb.h  rcon.pb.cc  rcon.pb.h  referee.pb.cc  referee.pb.h  savestate.pb.cc  savestate.pb.h
omid/ai/Protobuf/Vision/: messages_robocup_ssl_detection_tracked.pb.cc  messages_robocup_ssl_geometry_legacy.pb.h  messages_robocup_ssl_refbox_log.pb.cc  messages_robocup_ssl_refbox_log.pb.h  messages_robocup_ssl_wrapper.pb.h  messages_robocup_ssl_wrapper_legacy.pb.cc  messages_robocup_ssl_wrapper_legacy.pb.h  vision_detection.pb.cc
omid/ai/graphical/: glball.cpp  glball.h  glcircle.cpp  glcircle.h  glfield.cpp  glfield.h  glframe.cpp  glframe.h  glline.cpp  glline.h  glrobot.cpp  glrobot.h  gltext.cpp  gltext.h
play/: main.cpp
